03-10/wordpress-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: mysql
  namespace: sample-ns
spec:
  selector:
    app: mysql
  ports:
  - port: 3306

---
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-mysql
  labels:
    app: mysql
  namespace: sample-ns
spec:
  containers:
  - name: mysql
    image: mysql:8.2.0
    ports:
    - containerPort: 3306
      name: mysql
