03-10/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
  namespace: sample-ns
spec:
  type: LoadBalancer
  selector:
    app: wordpress
  ports:
  - port: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: wordpress
  labels:
    app: wordpress
  namespace: sample-ns
spec:
  containers:
  - name: wordpress
    image: wordpress:6.4.1
    ports:
    - containerPort: 80
      name: wordpress
