03-10/wordpress-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-netpol
  namespace: sample-ns  # NetworkPolicyを作成するNamespaceとしてsample-nsを指定
spec:
  podSelector:  # WordPress Podに付与されたラベルを指定
    matchLabels:
      app: wordpress
  policyTypes:  # 制限を行う通信の種類としてIngressとEgressを指定
  - Ingress
  - Egress
  ingress:  # Ingress通信に関する許可ルールを定義
  - ports:  # 80番ポート（TCP）への通信を許可
    - protocol: TCP
      port: 80
  egress:  # Egress通信に関する許可ルールを定義
  - to:  # MySQL Podへの通信を許可するためのルールを定義
    - podSelector:  # MySQL Podに付与されたラベルを指定
        matchLabels:
          app: mysql
    ports:  # 3306番ポート（TCP）への通信を許可
      - protocol: TCP
        port: 3306
  - to:  # Kubernetesの内部DNS（CoreDNS Pod）への通信を許可するためのルールを定義
    - namespaceSelector:  # kube-system Namespaceに付与されたラベルを指定
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:  # CoreDNS Podに付与されたラベルを指定
        matchLabels:
          k8s-app: kube-dns
    ports:  # 53番ポート（TCP/UDP）への通信を許可
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
